@@ -6,5 +6,6 @@ const router = new Router()
 router.get('/:id', controller.getCustomerById)
 router.put('/:id', controller.updateCustomer)
 router.delete('/:id', controller.deleteCustomer)
+router.get('/:id/orders', controller.findOrdersByCustomerId)
 
 module.exports = router.routes()
